# bare-distributable

./: .gitignore  CMakeLists.txt  import-map.json  package-lock.json  package.json  readme.md
.github/workflows/: test.yml
src/: import-map.json  main.c  main.js
